        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=14453
        REGRESSION: www.nzherald.co.nz almost all the formating is gone

        Be less strict for the hex color definition.



Canonical link: https://commits.webkit.org/18894@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24185 268f45cc-cd09-0410-ab3c-d52691b4dbfc